Fixing the casing for HeliumGeek

--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -35,4 +35,4 @@ What is new includes:
 2. Sample API code has been published
    [here](https://github.com/dewi-alliance/oracle-observer-sample).
 3. Third parties are working on new APIs and services to replace existing tools (Hotspotty,
-   Heliumgeek, Relay, etc.).
+   [HeliumGeek](https://heliumgeek.com), Relay, etc.).
