Adds migration countdown backed by sentinel

--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -6,10 +6,12 @@ sidebar_label: Solana Migration Overview
 description: Solana Migration Overview
 image: https://docs.helium.com/img/link-image.png
 slug: /solana/migration
-draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
+import MigrationStatus from '@site/src/theme/MigrationStatus';
+
+<MigrationStatus />
 
 Following the community-driven proposal,
 [HIP70 - Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
