Apply suggestions from code review
Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -37,17 +37,17 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The Helium Wallet app is the trusted way to manage your Helium tokens and identity.
 
-Some notable features from v2.x onwards
+Some notable features:
 
 - Multiple Account Support
 - Ledger Balance
 - Address Book
 - Verify your Helium Identity
-- Lock-up tokens for voting power and stakin gincome
+- Lock-up tokens for voting power and staking rewards
 - Voting on governance
 - Multiple Recipient Payment Support
-- Claimiing tokens from hotspots to your wallet
-- Transfer NFTs representing hotspot ownership
+- Claiming tokens from Hotspots to your wallet
+- Transfer NFTs representing Hotspot ownership
 - Exchange one Helium token for another or SOL
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
@@ -177,7 +177,7 @@ the Helium blockchain.
   src={useBaseUrl('img/wallets/helium-wallet-app/address-book-banner.png')}
 />
 
-This feature allows you to save names/nicknames and related Helium or Solana allet addresses for 
+This feature allows you to save names/nicknames and related wallet addresses for 
 those you may wish to send tokens to. Contacts are displayed in alphabetical order, and are searchable 
 by name or wallet address. There is no limit to the number of Contacts you can have.
 
