--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -125,8 +125,8 @@ the amount you are requesting, if it is a known quantity, and add a note.
 
 ### Multiple Recipient Payment Support
 
-Multiple recipient payments are now supported on the Wallet app. This is most useful for those that 
-need to wait for a payment transaction to clear and appear on the blockchain before sending the next 
+Multiple recipient payments are now supported on the Wallet app. This is most useful for those that
+need to wait for a payment transaction to clear and appear on the blockchain before sending the next
 payment.
 
 :::tip
@@ -177,11 +177,11 @@ the Helium blockchain.
   src={useBaseUrl('img/wallets/helium-wallet-app/address-book-banner.png')}
 />
 
-This feature allows you to save names/nicknames and related wallet addresses for 
-those you may wish to send tokens to. Contacts are displayed in alphabetical order, and are searchable 
-by name or wallet address. There is no limit to the number of Contacts you can have.
+This feature allows you to save names/nicknames and related wallet addresses for those you may wish
+to send tokens to. Contacts are displayed in alphabetical order, and are searchable by name or
+wallet address. There is no limit to the number of Contacts you can have.
 
-Tapping on a Contact displays the full Helium or Solana address as well as the Nickname field, which 
+Tapping on a Contact displays the full Helium or Solana address as well as the Nickname field, which
 can be adjusted at any time.
 
 ## Settings
@@ -286,6 +286,6 @@ Let us know via Discord if you experience any issues!
 
 ### Ledger Users
 
-See [Ledger wallet migration guide](/solana/migration/wallet-user) for guidance on how to migrate Ledger
-wallets to Solana. 
-See [Legger Wallet Hardware](https://docs.helium.com/wallets/ledger/) for how a Leger wallet was configured for HNT.
+See [Ledger wallet migration guide](/solana/migration/wallet-user) for guidance on how to migrate
+Ledger wallets to Solana. See [Legger Wallet Hardware](https://docs.helium.com/wallets/ledger/) for
+how a Leger wallet was configured for HNT.
