Apply suggestions from code review
Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -122,7 +122,7 @@ Reserved for marketing and educational campaigns around the MOBILE subDAO.
 ## Emissions Curve
 
 HIP 53 defined a max supply of 250B (billion) MOBILE with issuance halvenings every two years 
-aligned withthe HNT issuance halvenings. The first halving will occur on August 1, 2023, to align 
+aligned with the HNT issuance halvenings. The first MOBILE halving will occur on August 1, 2023, to align 
 with HNT halving and will continue on a 2-year cycle afterward. Creating a "stub period" as defined by
 [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), which will begin when standard emissions of MOBILE tokens 
 begin (and MOBILE can be redeemed by HNT in the subDAO's treasury).
@@ -131,7 +131,7 @@ begin (and MOBILE can be redeemed by HNT in the subDAO's treasury).
 of MOBILE on Feb 1st 2023.
 
 
-The date for the treasury implementation is April 18th 2023 and dependent on core developers 
+The date for the treasury implementation is April 18, 2023 and dependent on core developers 
 implementing the HNT token treasury and redemption transactions on the Solana Blockchain as 
 defined for all new subDAOs in Phase 2 of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
 
