stubs out architecture category

--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -10,6 +10,8 @@ slug: /oracles
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
+<img className="docsheader" src={useBaseUrl('img/blockchain/oracle.png')} />
+
 The migration of the Helium L1 to the Solana L1 brings several changes to the setup of the Network
 and its associated subDAOs infrastructure. Chief among these changes is moving a lot of data that
 has previously been "on-chain" (namely PoC data) "off-chain".
@@ -19,8 +21,8 @@ and the blockchain. These infrastructure changes will allow the Helium Network t
 introduce new Networks as Decentralized Network Protocol (DNP) subDAOs and more easily scale
 existing DNP subDAOs by removing existing bottlenecks.
 
-With the deprecation of the Helium L1, changes to [API] (https://docs.helium.com/api/) and [ETL]
-(https://github.com/helium/blockchain-etl) include:
+With the deprecation of the Helium L1, changes to [API](https://docs.helium.com/api/) and
+[ETL](https://github.com/helium/blockchain-etl) include:
 
 1. Existing ETL codebase: will no longer sync blocks.
 2. Existing API codebase: will no longer serve new data.
