--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -132,3 +132,13 @@ not limited to), [Hotspotty](https://hotspotty.net), [HeliumGeek](https://helium
 
 <!--TODO:  thank you for your service -->
 <!--TODO:  call to action for working group on running more Oracles -->
+
+
+:::info Why Solana?
+
+Read more about the
+[Helium Improvement Proposal](https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7)
+and the process of evaluating layer 1 Blockchains on the 
+[Helium Foundation Blog](https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c).
+
+:::
