--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -10,11 +10,9 @@ slug: /solana/migration/wallet-user
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-:::warning 🚧 This document is a work in progress. 🚧
-
-The documentation on Solana and the upcoming Migration is under development and subject to change.
-
-:::
+This guide provides step-by-step instructions for Helium app, Helium Wallet app, CLI Wallet, and 
+Ledger Wallet users to migrate their wallets to the Solana blockchain. By following the steps, users
+can smoothly access their HNT, DC, MOBILE, IOT, and Hotspots on the new platform.
 
 ## For Helium App Users
 
@@ -125,6 +123,9 @@ balances over to Solana. You may need to uninstall any Solana Ledger Apps during
 migration process.
 
 Your public key will change on Solana but the private key will remain the same.
+
+The [Ledger Migration](/solana/migration/ledger) document includes the utilities needed to update 
+your Helium Ledger account.
 
 ### Derivation Paths and your new Public Key
 
