--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -34,10 +34,10 @@ purchasing a 5G Hotspot and CBRS Radios to build coverage in your area!
 
 A general structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium
 Network was created with the passing of
-[HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md). The Helium Mobile
+[HIP-51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md). The Helium Mobile
 DAO with 5G Hotspots is the first step in the evolution of the Helium ecosystem.
 
-The passing of [HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
+The passing of [HIP-51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
 additionally allows for the creation of MOBILE tokens that will reward 5G Hotspots with Small Cell
 Radio(s) on the existing Helium Blockchain.
 
@@ -57,7 +57,7 @@ explain what you might earn and why.
 
 :::info Where Do Rewards Go?
 
-MOBILE PoC rewards will be credited to the Solana NFT that owns the 5G Hotspot a given Radio is 
+MOBILE PoC rewards will be credited to the Solana NFT that owns the 5G Hotspot a given Radio is
 connected to when the Rewards Oracle disperses MOBILE PoC Rewards.
 
 :::
@@ -84,7 +84,7 @@ pre-mine.
 
 The uses of proceeds are roughly defined as follows:
 
-**Genesis Period Rewards: 10B MOBILE**
+### Genesis Period Rewards
 
 The Helium Foundation will work with the core developers to initiate the Genesis period of MOBILE
 rewards. 100M (million) tokens will be programmatically issued per day to all active Helium 5G
@@ -94,7 +94,7 @@ Details of the proportional mining rewards for active 5G Small Cell Radios
 [can be found here.](/5g-on-helium/mobile-poc) Any MOBILE not mined during the Genesis period may be
 reallocated to Grants and Operations.
 
-**Grants and Operations: 30B MOBILE**
+### Grants and Operations
 
 The Helium Foundation will distribute grants to teams making core contributions to the development
 of the MOBILE subDAO. Grants will be distributed based on defined deliverables and milestones.
@@ -104,16 +104,16 @@ for the MOBILE subDAO. This is spread across three deliverables with 5B MOBILE p
 total grant of 15B MOBILE:
 
 - Milestone 1: Ability for 5G Hotspots to earn MOBILE (by August 2022)
-- Milestone 2: Development and release of programmatic treasury (by October 2022) 
--   Actual Programatic Minting started Feb 1 2023
--   The treasury is due to start on April 19 2023
-- Milestone 3: Proof-of-Coverage based rewards (by January 2023) 
--   Actual date TBC.
+- Milestone 2: Development and release of programmatic treasury (by October 2022)
+  - Actual Programatic Minting started Feb 1 2023
+  - The treasury is due to start on April 19 2023
+- Milestone 3: Proof-of-Coverage based rewards (by January 2023)
+  - Actual date TBC.
 
 The remaining 15B MOBILE is reserved for other work pertaining to Oracles and Mappers development or
 other community contributions.
 
-**Growth Activities Related to the MOBILE subDAO: 10B MOBILE**
+### Growth Activities Related to the MOBILE subDAO
 
 Reserved for marketing and educational campaigns around the MOBILE subDAO.
 
