--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -80,7 +80,8 @@ As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.m
 the Helium Foundation receives an allocation of 50B (billion) of 250B MOBILE tokens in the form of a
 pre-mine.
 
-[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the emission schedule and started the programatic minting of MOBILE.
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve)
+further modifiled the emission schedule and started the programatic minting of MOBILE.
 
 The uses of proceeds are roughly defined as follows:
 
@@ -121,19 +122,21 @@ Reserved for marketing and educational campaigns around the MOBILE subDAO.
 
 ## Emissions Curve
 
-HIP 53 defined a max supply of 250B (billion) MOBILE with issuance halvenings every two years 
-aligned with the HNT issuance halvenings. The first MOBILE halving will occur on August 1, 2023, to align 
-with HNT halving and will continue on a 2-year cycle afterward. Creating a "stub period" as defined by
-[HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), which will begin when standard emissions of MOBILE tokens 
-begin (and MOBILE can be redeemed by HNT in the subDAO's treasury).
+HIP-53 defined a max supply of 250B (billion) MOBILE with issuance halvenings every two years
+aligned with the HNT issuance halvenings. The first MOBILE halving will occur on August 1, 2023, to
+align with HNT halving and will continue on a 2-year cycle afterward. Creating a "stub period" as
+defined by [HIP-53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md),
+which will begin when standard emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT
+in the subDAO's treasury).
 
-[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) further modifiled the emission schedule and started the programatic minting 
-of MOBILE on Feb 1st 2023.
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve)
+further modifiled the emission schedule and started the programatic minting of MOBILE on Feb
+1st 2023.
 
-
-The date for the treasury implementation is April 18, 2023 and dependent on core developers 
-implementing the HNT token treasury and redemption transactions on the Solana Blockchain as 
-defined for all new subDAOs in Phase 2 of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
+The date for the treasury implementation is April 18, 2023 and dependent on core developers
+implementing the HNT token treasury and redemption transactions on the Solana Blockchain as defined
+for all new subDAOs in Phase 2 of
+[HIP-51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
 
 ---
 
