--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -81,9 +81,162 @@ the Helium Foundation receives an allocation of 50B (billion) of 250B MOBILE tok
 pre-mine.
 
 [HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve)
-further modifiled the emission schedule and started the programatic minting of MOBILE.
+further modifiled the emission schedule and started the programatic minting of MOBILE as follows:
 
-The uses of proceeds are roughly defined as follows:
+<div>
+  <div class="row emmisions-table">
+    <div class="col col--2" style={{ marginBottom: 0 }}>
+      <p></p>
+    </div>
+    <div class="col col--5" style={{ marginBottom: 0 }}>
+      <p>BEFORE: HIP-53 Emissions Schedule</p>
+    </div>
+    <div class="col col--5" style={{ marginBottom: 0 }}>
+      <p>AFTER: HIP-75 Emissions Schedule</p>
+    </div>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>Year</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>MOBILE at year start</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>MOBILE minted</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>MOBILE at year start </p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>MOBILE minted</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>1</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>50B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>116B*</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>50B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>80B*</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>2</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>116B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>33B</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>80B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>30B</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>3</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>149.5B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>33B</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>110B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>30B</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>4</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>182B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>16.5B</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>140B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>15B</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>5</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>198.5B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>16.5B</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>155B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>15B</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>6</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>215B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>8.25B</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>170B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>7.5B</p>
+  </div>
+</div>
+<div class="row emmisions-table">
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>7</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>223.25B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>8.25B</p>
+  </div>
+  <div class="col col--3" style={{ marginBottom: 0 }}>
+    <p>177.5B</p>
+  </div>
+  <div class="col col--2" style={{ marginBottom: 0 }}>
+    <p>7.5B</p>
+  </div>
+</div>
+
+\*50B pre-mine
+
+Full emissions schedule of HIP53 and HIP75 can be downloaded
+[here](./0075-mobile-poc-programmatic-minting/mobile-emissions-schedule-HIP53-vs-HIP75.pdf).
 
 ### Genesis Period Rewards
 
