corrected local link

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -236,7 +236,7 @@ further modifiled the emission schedule and started the programatic minting of M
 \*50B pre-mine
 
 Full emissions schedule of HIP53 and HIP75 can be downloaded
-[here](./0075-mobile-poc-programmatic-minting/mobile-emissions-schedule-HIP53-vs-HIP75.pdf).
+[here](https://github.com/helium/HIP/blob/main/0075-mobile-poc-programmatic-minting/mobile-emissions-schedule-HIP53-vs-HIP75.pdf).
 
 ### Genesis Period Rewards
 
