Update helium-wallet-app.mdx (#1156)
* Update helium-wallet-app.mdx

Minor updates for v2.x.x

* Apply suggestions from code review

Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

* line wrap

---------

Co-authored-by: Sam Gutentag <developer@samgutentag.com>
Co-authored-by: Joey Hiller <1965053+jthiller@users.noreply.github.com>

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -43,8 +43,12 @@ Some notable features:
 - Ledger Balance
 - Address Book
 - Verify your Helium Identity
-- Helium Vote
+- Lock-up tokens for voting power and staking rewards
+- Voting on governance
 - Multiple Recipient Payment Support
+- Claiming tokens from Hotspots to your wallet
+- Transfer NFTs representing Hotspot ownership
+- Exchange one Helium token for another or SOL
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
 the [Maker Apps](/hotspot-makers/maker-apps) available from the manufacturer.
@@ -91,7 +95,7 @@ funds stolen.
 />
 
 Import your Ledger account by pairing with it over Bluetooth. Payment and other transaction support
-will be coming soon.
+will be coming soon, after the Solana Migration date.
 
 ## Working With Multiple Wallets
 
@@ -121,9 +125,9 @@ the amount you are requesting, if it is a known quantity, and add a note.
 
 ### Multiple Recipient Payment Support
 
-Already available on the CLI wallet, multiple recipient payments are now supported on the Wallet
-app. This is most useful for those that need to wait for a payment transaction to clear and appear
-on the blockchain before sending the next payment.
+Multiple recipient payments are now supported on the Wallet app. This is most useful for those that
+need to wait for a payment transaction to clear and appear on the blockchain before sending the next
+payment.
 
 :::tip
 
@@ -173,12 +177,12 @@ the Helium blockchain.
   src={useBaseUrl('img/wallets/helium-wallet-app/address-book-banner.png')}
 />
 
-This feature allows you to save names/nicknames and related HNT wallet addresses for those you may
-wish to send HNT to. Contacts are displayed in alphabetical order, and are searchable by name or
+This feature allows you to save names/nicknames and related wallet addresses for those you may wish
+to send tokens to. Contacts are displayed in alphabetical order, and are searchable by name or
 wallet address. There is no limit to the number of Contacts you can have.
 
-Tapping on a Contact displays the full HNT address as well as the Nickname field, which can be
-adjusted at any time.
+Tapping on a Contact displays the full Helium or Solana address as well as the Nickname field, which
+can be adjusted at any time.
 
 ## Settings
 
@@ -282,7 +286,6 @@ Let us know via Discord if you experience any issues!
 
 ### Ledger Users
 
-Ledger is not yet supported for the Helium Wallet app migration, but it will be supported through
-the Helium Ledger CLI. More information on migrating Ledger wallets will come soon! See the
-[Ledger wallet migration guide](/solana/migration/wallet-user) for guidance on how to migrate Ledger
-wallets using the Helium Ledger CLI.
+See [Ledger wallet migration guide](/solana/migration/wallet-user) for guidance on how to migrate
+Ledger wallets to Solana. See [Legger Wallet Hardware](https://docs.helium.com/wallets/ledger/) for
+how a Leger wallet was configured for HNT.
