IoT section cleanup

--- a/docs/lorawan-on-helium/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming-on-helium.mdx
@@ -1,8 +1,8 @@
 ---
 id: lorawan-roaming-on-helium
 title: LoRaWAN Roaming On Helium
-pagination_label: LoRaWAN Roaming On Helium
-sidebar_label: LoRaWAN Roaming On Helium
+pagination_label: Roaming
+sidebar_label: Roaming
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /lorawan-on-helium/lorawan-roaming-on-helium
