--- a/docs/lorawan-on-helium/proof-of-coverage.mdx
+++ b/docs/lorawan-on-helium/proof-of-coverage.mdx
@@ -1,8 +1,8 @@
 ---
 id: iot-proof-of-coverage
-title: IOT Proof of Coverage
-pagination_label: IOT Proof of Coverage
-sidebar_label: IOT Proof of Coverage
+title: IOT Proof of Coverage Roadmap
+pagination_label: Proof of Coverage Roadmap
+sidebar_label: Proof of Coverage Roadmap
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /lorawan-on-helium/iot-proof-of-coverage
