--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -1,8 +1,8 @@
 ---
 id: helium-hotspot-app
-title: Helium Hotspot App (Is Being Deprecated)
+title: Helium Hotspot App
 pagination_label: Helium Hotspot App
-sidebar_label: 🚫 Helium Hotspot App 🚫
+sidebar_label: Helium Hotspot App
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /mine-hnt/helium-hotspot-app
