swap html table for markdown table

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -128,155 +128,16 @@ in the subDAO's treasury).
 further modifiled the emission schedule and started the programatic minting of MOBILE on Feb
 1st 2023.
 
-<div>
-  <div class="row emmisions-table">
-    <div class="col col--2" style={{ marginBottom: 0 }}>
-      <p></p>
-    </div>
-    <div class="col col--5" style={{ marginBottom: 0 }}>
-      <p>BEFORE: HIP-53 Emissions Schedule</p>
-    </div>
-    <div class="col col--5" style={{ marginBottom: 0 }}>
-      <p>AFTER: HIP-75 Emissions Schedule</p>
-    </div>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>Year</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>MOBILE at year start</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>MOBILE minted</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>MOBILE at year start </p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>MOBILE minted</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>1</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>50B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>116B*</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>50B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>80B*</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>2</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>116B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>33B</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>80B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>30B</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>3</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>149.5B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>33B</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>110B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>30B</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>4</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>182B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>16.5B</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>140B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>15B</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>5</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>198.5B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>16.5B</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>155B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>15B</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>6</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>215B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>8.25B</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>170B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>7.5B</p>
-  </div>
-</div>
-<div class="row emmisions-table">
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>7</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>223.25B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>8.25B</p>
-  </div>
-  <div class="col col--3" style={{ marginBottom: 0 }}>
-    <p>177.5B</p>
-  </div>
-  <div class="col col--2" style={{ marginBottom: 0 }}>
-    <p>7.5B</p>
-  </div>
-</div>
+|      | BEFORE: HIP-53 Emissions Schedule |               | AFTER: HIP-75 Emissions Schedule |
+| ---- | --------------------------------- | ------------- | -------------------------------- | ------------- |
+| Year | MOBILE at year start              | MOBILE minted | MOBILE at year start             | MOBILE minted |
+| 1    | 50B                               | 116B\*        | 50B                              | 80B\*         |
+| 2    | 116B                              | 33B           | 80B                              | 30B           |
+| 3    | 149.5B                            | 33B           | 110B                             | 30B           |
+| 4    | 182B                              | 16.5B         | 140B                             | 15B           |
+| 5    | 198.5B                            | 16.5B         | 155B                             | 15B           |
+| 6    | 215B                              | 8.25B         | 170B                             | 7.5B          |
+| 7    | 223.25B                           | 8.25B         | 177.5B                           | 7.5B          |
 
 \*50B pre-mine
 
