Remove majority of WIP banners

--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -8,7 +8,7 @@ image: https://docs.helium.com/img/link-image.png
 slug: /helium-tokens/mobile
 ---
 
-import useBayseUrl from '@docusaurus/useBaseUrl'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning 🚧 This document is a work in progress. 🚧
 
