--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -8,13 +8,7 @@ image: https://docs.helium.com/img/link-image.png
 slug: /solana/migration/blockchain-node
 ---
 
-import useBayseUrl from '@docusaurus/useBaseUrl'
-
-:::warning 🚧 This document is a work in progress. 🚧
-
-The documentation on Solana and the upcoming Migration is under development and subject to change.
-
-:::
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Migrating wallet to Solana
 
