--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -8,14 +8,7 @@ image: https://docs.helium.com/img/link-image.png
 slug: /helium-tokens/iot
 ---
 
-import useBayseUrl from '@docusaurus/useBaseUrl'
-
-:::warning 🚧 This document is a work in progress. 🚧
-
-The documentation on subDAO Tokens and the upcoming Migration is under development and subject to
-change.
-
-:::
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The IOT Token is the native cryptocurrency and protocol token of the LoRaWAN Hotspots. Its symbol is
 `IOT`. At the time of launch on the Solana Blockchain, symbolizing the end of the migration to
