--- a/docs/solana/compression-nfts.mdx
+++ b/docs/solana/compression-nfts.mdx
@@ -8,7 +8,7 @@ image: https://docs.helium.com/img/link-image.png
 slug: /solana/compression-nfts
 ---
 
-import useBayseUrl from '@docusaurus/useBaseUrl'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning 🚧 This document is a work in progress. 🚧
 
