Break out pages for API and ETL migration

--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -27,112 +27,78 @@ applications.
 
 <img className="docsheader" src={useBaseUrl('img/migration/migrationheader.png')} />
 
-## Community & Discord
+<!-- ## Community & Discord
 
 The Helium Foundation is supported by community governance groups through the Solana Migration
-process.
+process. -->
 
 <!--TODO:  Efforts are underway to streamline the Discord experience for current and new members. -->
 
----
 
-## Community Developers/Core Devs
+
+<!-- ## Community Developers/Core Devs -->
 
 <!--TODO:  get help and join the conversation in discord channel -->
 <!--TODO:  check out the helium-progrma libraby on github -->
 
-Looking to learn more about Solana development? Check out the
+<!-- Looking to learn more about Solana development? Check out the
 [Solana Discord Server](https://discord.com/invite/kBbATFA7PW) or review the
-[Solana Docs](https://docs.solana.com).
+[Solana Docs](https://docs.solana.com). -->
 
----
 
-## Console Users
+
+<!-- ## Console Users -->
 
 <!--TODO: Console and Console API -->
 <!--TODO: chirpstack -->
 <!--TODO: openLNS -->
 
----
 
-## ETL Instance Deployers
 
-[Blockchain ETL](https://github.com/helium/blockchain-etl) will halt along with the blockchain
-during the migration. Hosted instances of this service may chose to continue offering historical
-data from the Helium L1 via these synced ETLs. A full snapshot of the Helium L1 will be retained and
-uploaded for public availability post-migration. 
 
-For ongoing insight into the operation of the Helium Network, please refer to the 
-[Oracle Data](/oracles/oracle-data) documentation.
 
----
 
-## Helium Blockchain API Users
-
-Along with the Blockchain ETL, the existing Helium API will serve only information up to the chain 
-halt at time of migration. Knowing that some users will continue to rely on historical data, The 
-Helium Foundation has formed an agreement with the API provider, BlockJoy to continue hosting this 
-API following the migration.
-
-For ongoing access, several organizations are already building new API services based on the 
-[Oracle Data](/oracles/oracle-data) available after the migration. These organizations include (but
-not limited to), [Hotspotty](https://hotspotty.net), [HeliumGeek](https://heliumgeek.com), 
-[Relay](https://www.relaydevice.com) and [Watchium](https://watchium.disk91.com).
-
----
-
-## Helium Wallet CLI & Ledger CLI Users
+<!-- ## Helium Wallet CLI & Ledger CLI Users -->
 
 <!--TODO:  wallet-cli -> more infomration soon -->
 <!--TODO:  ledger cli -> solana cli clone with helium derivation path -->
 
----
-
-## HIP Voters
+<!-- ## HIP Voters -->
 
 <!--TODO:  thank for current process -->
 <!--TODO:  links to read about realms -->
 <!--TODO:  Vote Escrow Tokens -->
 <!--TODO:  subDAO governance -->
 
----
+<!-- ## Hotspot Operators -->
 
-## Hotspot Operators
-
-<!--TODO:  link to migratino guide -->
+<!--TODO:  link to migration guide -->
 <!--TODO:  hotspots to start earning IOT instead of HNT -->
 <!--TODO:  existing HNT remains HNT -->
 <!--TODO:  IOT TOken Premine -->
 
----
-
-## Hotspot Vendors
+<!-- ## Hotspot Vendors -->
 
 <!--TODO:  maker apps update guides -->
 
----
-
-## LoRaWAN Roaming Partners
+<!-- ## LoRaWAN Roaming Partners -->
 
 <!--TODO:  openLNS and Helium Packet Router -->
 <!--TODO:  ?ask joey? -->
 
----
-
-## Token Holders
+<!-- ## Token Holders -->
 
 <!--TODO:  new Tokens, IOT/MOBILE/HNT -->
 <!--TODO:  what happens to HNT -->
 <!--TODO:  reading on SPL Tokens -->
 <!--TODO:  wallets and exchanges -->
 
----
-
-## Validator Operators & Operators
+<!-- ## Validator Operators & Operators -->
 
 <!--TODO:  thank you for your service -->
 <!--TODO:  call to action for working group on running more Oracles -->
 
+---
 
 :::info Why Solana?
 
