--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -100,3 +100,4 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <!--TODO:  thank you for your service -->
 <!--TODO:  call to action for working group on running more Oracles -->
+<!-- previous state -->
