--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -9,16 +9,16 @@ slug: /solana/migration
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
-import MigrationStatus from '@site/src/theme/MigrationStatus';
+import MigrationStatus from '@site/src/theme/MigrationStatus'
 
 <MigrationStatus />
 
 Following the community-driven proposal,
 [HIP70 - Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
-the Helium Network will migrate to the Solana blockchain on **April 18, 2023**. This strategic move,
-voted in by the community, aims to capitalize on Solana's scalability, low transaction costs, and
-high-performance capabilities, including its fast transaction throughput and energy-efficient
-consensus mechanism.
+the Helium Network will migrate to the Solana blockchain on **April 18, 2023, 9am PST**. This
+strategic move, voted in by the community, aims to capitalize on Solana's scalability, low
+transaction costs, and high-performance capabilities, including its fast transaction throughput and
+energy-efficient consensus mechanism.
 
 The migration to Solana offers key benefits for the Helium Network: it enables the IoT and Mobile
 networks to support even greater scale, supports more sophisticated Proof of Coverage algorithms,
@@ -34,8 +34,6 @@ process. -->
 
 <!--TODO:  Efforts are underway to streamline the Discord experience for current and new members. -->
 
-
-
 <!-- ## Community Developers/Core Devs -->
 
 <!--TODO:  get help and join the conversation in discord channel -->
@@ -45,18 +43,11 @@ process. -->
 [Solana Discord Server](https://discord.com/invite/kBbATFA7PW) or review the
 [Solana Docs](https://docs.solana.com). -->
 
-
-
 <!-- ## Console Users -->
 
 <!--TODO: Console and Console API -->
 <!--TODO: chirpstack -->
 <!--TODO: openLNS -->
-
-
-
-
-
 
 <!-- ## Helium Wallet CLI & Ledger CLI Users -->
 
@@ -104,7 +95,7 @@ process. -->
 
 Read more about the
 [Helium Improvement Proposal](https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7)
-and the process of evaluating layer 1 Blockchains on the 
+and the process of evaluating layer 1 Blockchains on the
 [Helium Foundation Blog](https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c).
 
 :::
