--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -10,7 +10,6 @@ slug: /solana/migration/exchange
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-
 :::warning 🚧 This document is a work in progress. 🚧
 
 The documentation on Solana and the upcoming Migration is under development and subject to change.
@@ -53,7 +52,7 @@ secret keys mapping directly to Solana wallets.
 
 You can either migrate you wallet using this widget:
 
-import { MigrateWallet } from "@theme/MigrateWallet"
+import { MigrateWallet } from '@theme/MigrateWallet'
 
 <MigrateWallet />
 
