--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -10,18 +10,24 @@ slug: /solana
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
+<img className="docsheader" src={useBaseUrl('img/migration/migrationheader.png')} />
+
 ## Major Milestones
 
-- Available on Solana DevNet for testing [Deployed]
-- Smart Contract Audit [Finished]
+- Available on Solana DevNet for testing [Complete]
+- sec3 Smart Contract Audit 
+[[Complete](https://github.com/sec3-service/reports/blob/master/reports/sec3_helium_program_library_report.pdf)]
 - MainNet Launch [Soon™]
 
 ### Migration Process Steps
+The migration to Solana will take place on April 18, 2023 beginning at 9am PST. The team is holding
+a 48 hour window to complete the migration. Hotspots and LoRaWAN devices will continue to operate
+throughout the migration window.
 
 1. The Helium blockchain will officially halt.
-2. Chain state will be snapshotted.
+2. A snapshot will be taken of Helium chain state.
 3. Existing $HNT and $MOBILE will be mapped to Solana. Hotspots will be minted as NFTs.
-4. During the Migration, POC and Data Transfer will continue to function through the offchain
+4. During the Migration, PoC and Data Transfer will continue to function through the offchain
    Oracle, rewards will be claimable after the transition phase (estimated 24-48 hours) is complete.
 5. Users and Exchanges can access their assets using the same private key on Solana (Solana and
    Helium blockchain use the same [ed25519 encryption](https://en.wikipedia.org/wiki/EdDSA)
@@ -36,6 +42,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 As part of the Helium blockchain migration to Solana, there are some changes to existing Helium
 Wallets and Applications for users to be aware of.
 
+Complete [migration guides](/solana/migration/) have been written for different users of Helium.
+
 :::info Hotspot NFTs and Token Management
 
 The Helium Network move to the Solana blockchain will result in all Hotspots automatically becoming
@@ -44,18 +52,6 @@ IOT, and MOBILE), can be viewed in the [Helium Wallet app](/wallets/helium-walle
 
 :::
 
-The following are migration guides for different users of Helium:
-
-- [Application Builder](/solana/migration/application-builder)
-- [Exchange](/solana/migration/exchange)
-- [Governance Participant](/solana/migration/governance)
-- [Hotspot Owner](/solana/migration/hotspot-operator)
-- [Wallet User](/solana/migration/wallet-user)
-- [LoRaWAN Network User](/solana/migration/network-user)
-- [Maker](/solana/migration/maker)
-- [Wallet App User](./solana/migration/wallet-user)
-- [Leder Hardware Wallet User](./solana/migration/ledger)
-
 ---
 
 ## Helium Programs on Solana
@@ -63,14 +59,9 @@ The following are migration guides for different users of Helium:
 The code for all of these Programs is open source, and available in the
 [helium-program-library](https://github.com/helium/helium-program-library) repository on Github.
 
-:::info Program Audit
-
-These contracts are being audited by [Sec3](https://www.sec3.dev/). A link to audit report will be
-provided once complete.
-
-<!--TODO: Not yet, when it's done link to audit report  -->
-
-:::
+The Helium Programs have been audited by [Sec3](https://www.sec3.dev/). The audit report was 
+published March 20, 2023. The audit report is available from sec3 on their 
+[GitHub reports repo](https://github.com/sec3-service/reports/blob/master/reports/sec3_helium_program_library_report.pdf).
 
 #### circuit_breaker
 
