--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -16,13 +16,13 @@ can smoothly access their HNT, DC, MOBILE, IOT, and Hotspots on the new platform
 
 ## For Helium App Users
 
-The Helium app will require a migration to the Helium Wallet app. Wallet migration is necessary to
+The Helium app will require a migration to the [Helium Wallet app.](https://docs.helium.com/wallets/helium-wallet-app) Wallet migration is necessary to
 interact with your HNT, DC, MOBILE, IOT, and Hotspots on the Solana blockchain. You can find Hotspot
 NFTs in the NFT Collectibles section once Helium on Solana goes live. Token balances are visible on
-the account page. You can also create multiple accounts in the Helium Wallet app.
+the account page. You can also create or import multiple accounts to a maxium of 10 on the Helium Wallet app.
 
 To start, ensure your Helium app is updated and that you have downloaded the latest Helium Wallet
-app.
+app v2 or higher.
 
 <div class="container">
   <div class="row" style={{ marginBottom: 20 }}>
