--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -11,17 +11,17 @@ slug: /solana/migration/wallet-user
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 This guide provides step-by-step instructions for Helium app, Helium Wallet app, CLI Wallet, and
-Ledger Wallet users to migrate their wallets to the Solana blockchain. By following the steps, users
-can smoothly access their HNT, DC, MOBILE, IOT, and Hotspots on the new platform.
+Ledger Wallet users to migrate their wallets to the Solana blockchain.
+
+Wallet migration is necessary to interact with your HNT, DC, MOBILE, IOT, and Hotspots on the Solana
+blockchain. You can find Hotspot NFTs in the NFT Collectibles section once Helium on Solana goes
+live. Token balances are visible on the account page. You can also create or import multiple
+accounts to a maxium of 10 on the Helium Wallet app.
 
 ## For Helium App Users
 
-The Helium app will require a migration to the
-[Helium Wallet app](https://docs.helium.com/wallets/helium-wallet-app). Wallet migration is
-necessary to interact with your HNT, DC, MOBILE, IOT, and Hotspots on the Solana blockchain. You can
-find Hotspot NFTs in the NFT Collectibles section once Helium on Solana goes live. Token balances
-are visible on the account page. You can also create or import multiple accounts to a maxium of 10
-on the Helium Wallet app.
+> The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) will require a migration to the
+> [Helium Wallet app](/wallets/helium-wallet-app).
 
 To start, ensure your Helium app is updated and that you have downloaded the latest Helium Wallet
 app v2 or higher.
