line wrap, and admonition for audit

--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -15,11 +15,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 ## Major Milestones
 
 - Available on Solana DevNet for testing [Complete]
-- sec3 Smart Contract Audit 
-[[Complete](https://github.com/sec3-service/reports/blob/master/reports/sec3_helium_program_library_report.pdf)]
+- sec3 Smart Contract Audit
+  [[Complete](https://github.com/sec3-service/reports/blob/master/reports/sec3_helium_program_library_report.pdf)]
 - MainNet Launch [Soon™]
 
 ### Migration Process Steps
+
 The migration to Solana will take place on April 18, 2023 beginning at 9am PST. The team is holding
 a 48 hour window to complete the migration. Hotspots and LoRaWAN devices will continue to operate
 throughout the migration window.
@@ -59,9 +60,13 @@ IOT, and MOBILE), can be viewed in the [Helium Wallet app](/wallets/helium-walle
 The code for all of these Programs is open source, and available in the
 [helium-program-library](https://github.com/helium/helium-program-library) repository on Github.
 
-The Helium Programs have been audited by [Sec3](https://www.sec3.dev/). The audit report was 
-published March 20, 2023. The audit report is available from sec3 on their 
+:::info Program Audits
+
+The Helium Programs have been audited by [Sec3](https://www.sec3.dev/). The audit report was
+published March 20, 2023. The audit report is available from sec3 on their
 [GitHub reports repo](https://github.com/sec3-service/reports/blob/master/reports/sec3_helium_program_library_report.pdf).
+
+:::
 
 #### circuit_breaker
 
