--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -81,7 +81,7 @@ provides a link to the corresponding protobuf used to decode the data.
 | foundation-iot-entropy          | Entropy                         | entropy.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5)              |
 | foundation-iot-ingest           | IotBeaconIngestReport           | iot_beacon_ingest_report.\*            | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)    |
 | foundation-iot-ingest           | IotWitnessIngestReport          | iot_witness_ingest_report.\*           | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)    |
-| foundation-iot-packet-ingest    | Coming soon                     |
+| foundation-iot-packet-ingest    | PacketReport                    | packetreport.\*                        | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/packet_router.proto#L8) 
 | foundation-iot-packet-verifier  | Coming soon                     |
 | foundation-iot-verified-rewards | IotPoc                          | iot_poc.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)   |
 | foundation-iot-verified-rewards | IotInvalidBeaconReport          | iot_invalid_beacon.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)   |
