lowercase devnet/mainnet

--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -14,10 +14,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Major Milestones
 
-- Available on Solana DevNet for testing [Complete]
+- Available on Solana devnet for testing [Complete]
 - sec3 Smart Contract Audit
   [[Complete](https://github.com/sec3-service/reports/blob/master/reports/sec3_helium_program_library_report.pdf)]
-- MainNet Launch [Soon™]
+- Mainnet Launch [Soon™]
 
 ### Migration Process Steps
 
