--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -18,6 +18,7 @@ Some important notes:
 - Hotspots will begin mining IOT tokens.
 - Hotspots will become NFTs on the Solana Blockchain, visible in the Helium Wallet App.
 - IOT Rewards are earned and accumulated to the Hotspot, and must be "claimed".
+- Existing HNT tokens will remain HNT tokens.
 
 All existing Helium Hotspots from all Hotspot Manufacturers will become "LoRaWAN Hotspots".
 
