--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -18,6 +18,8 @@ blockchain. You can find Hotspot NFTs in the NFT Collectibles section once Heliu
 live. Token balances are visible on the account page. You can also create or import multiple
 accounts to a maxium of 10 on the Helium Wallet app.
 
+Existing HNT and MOBILE tokens in your wallets will remain unchanged by this migration.
+
 ## For Helium App Users
 
 > The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) will require a migration to the
