--- a/docs/hotspot-makers/maker-ethics.mdx
+++ b/docs/hotspot-makers/maker-ethics.mdx
@@ -142,7 +142,9 @@ genuine resellers and partners. Manufacturers will be held accountable for the i
 distributor/ reseller network.
 
 ### 11. The MCC considered Dual-Mining to be a gateway/Hotspot that mines both Helium tokens and another application.
-    1. Dual-Mining is only permitted so long as it does not conflict with a DeWi Network.
-        1. A DeWi network is any decentralized wireless network running on a blockchain and issuing tokens. Examples include LoRaWAN, CBRS, WiFi, etc.
-    2. Dual-Mining on a Hotspot, on another DeWi network in a way that is competitive with the growth of Helium Networks is not allowed.
 
+1. Dual-Mining is only permitted so long as it does not conflict with a DeWi Network.
+   1. A DeWi network is any decentralized wireless network running on a blockchain and issuing
+      tokens. Examples include LoRaWAN, CBRS, WiFi, etc.
+2. Dual-Mining on a Hotspot, on another DeWi network in a way that is competitive with the growth of
+   Helium Networks is not allowed.
