--- a/docs/solana/hst.mdx
+++ b/docs/solana/hst.mdx
@@ -22,6 +22,8 @@ The architecture of the hydra wallet has a few important considerations:
 
 Knowing these considerations, if you wish to move your HST tokens, it is important that you **restake them before the epoch ends at UTC midnight**
 
+All HST tokens were **pre-staked** when issued to you on Solana. If you do not wish to move them, you do not need to do anything. HNT should appear in your wallet daily at 12:30am UTC
+
 You can stake and unstake your HST below. This will automatically setup a clockwork job for distributions with enogh sol to last 50 years. You can connect any Solana compatible wallet following the Wallet Standard, including the Helium Wallet App.
 
 import { HstManager } from "@theme/HstManager"
