--- a/docs/solana/hst.mdx
+++ b/docs/solana/hst.mdx
@@ -12,7 +12,7 @@ HST on Solana is implemented via a [Metaplex Hydra](https://github.com/metaplex-
 
 This technology ensures that when HNT is emitted for an epoch, the HST share is subsequently distributed to HST holders. Further,
 a [clockwork](https://www.clockwork.xyz/) job runs at 12:30am UTC daily to ensure that epoch's HNT is distributed. 
-This is entirely programmatic, meaning at no point does Helium Foundation have custody of your HNT.
+This is entirely programmatic, meaning at no point does any party have custody of your HNT.
 
 The architecture of the hydra wallet has a few important considerations:
 
