Add python downlink example, minor cleaning

--- a/docs/blockchain/oracles.mdx
+++ b/docs/blockchain/oracles.mdx
@@ -44,7 +44,7 @@ Every `10` blocks (roughly every 10 minutes) the blockchain will attempt to esta
 
 **What's the current HNT Oracle Price?**
 
-- [Click here.](https://api.helium.io/v1/oracle/prices/current)
+- [HNT Oracle Price at api.helium.io](https://api.helium.io/v1/oracle/prices/current)
 
 ### Who are the HNT Price Oracles?
 
