--- a/docs/use-the-network/console/integrations/json-schema.mdx
+++ b/docs/use-the-network/console/integrations/json-schema.mdx
@@ -12,7 +12,7 @@ slug: /use-the-network/console/integrations/json-schema
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-When receiving or transmitting data with an integration there is a consistent JSON Schema for the
+When receiving or transmitting data with an integration, there is a consistent JSON Schema for the
 data.
 
 ## Uplink: Receiving Data from a Device
@@ -113,11 +113,13 @@ Here is an example of data received:
 
 | Field           | Description |                                                                                                                                                                          |
 | :-------------- | :---------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **payload_raw** | String      | Data transmitted to your device as a base64 encoded String. Most computer languages will have some built-in libraries for parsing this \(e.g. base64.encode\(payload\)\) |
-| **port**        | Number      | LoRaWAN FPort on which the data was transmitted; this can be useful for routing data within the application                                                              |
-| **confirmed**   | Bool        | Whether or not a device acknowledgement is required                                                                                                                      |
+| **payload_raw** | String      | Data transmitted to your device as a base64 encoded String. Most programming languages will have some built-in libraries for parsing/encoding this \(e.g., Python's `payload = base64.b64encode(payload_str.encode('utf-8')).decode('ascii')`\) |
+| **port**        | Number      | LoRaWAN FPort on which the data is to be transmitted; this can be useful for routing data within the application                                                              |
+| **confirmed**   | Bool        | Whether a device acknowledgement (ACK) is required                                                                                                                      |
+
+Note that many devices will show the downlinked payload (submitted as base64 in the JSON schema) as hex (base-16).
 
 ### Clearing a Device Queue
 
-If the **payload_raw** field is the base64 encoded value `'__clear_downlink_queue__'` any downlinks
-queued for that device will be removed.
+If the **payload_raw** field is set to the base64 encoded value 
+`'__clear_downlink_queue__'`, all downlinks queued for that device will be removed.
