Updating HeliumGeek URL

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -117,5 +117,5 @@ Several Helium ecosystem companies are building interfaces around Oracle data. T
 from APIs to Oracle data explorers
 
 - [Hotspotty](https://hotspotty.net)
-- [HeliumGeek](https://heliumgeek.com)
+- [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html)
 - [Helium Deploy](https://www.heliumdeploy.io)
