add hotspotty api documentation link

--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -36,5 +36,5 @@ What is new includes:
    [AWS S3](https://docs.helium.com/oracles/oracle-data)
 2. Sample API code has been published
    [here](https://github.com/dewi-alliance/oracle-observer-sample).
-3. Third parties are working on new APIs and services to replace existing tools (Hotspotty,
+3. Third parties are working on new APIs and services to replace existing tools ([Hotspotty](https://hotspotty.net/api/),
    [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html), Relay, etc.).
