Updates two more references to Hotspotty API

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -116,6 +116,6 @@ zipped bytestreams. In order to 'unpack' this data, you'll need the associated p
 Several Helium ecosystem companies are building interfaces around Oracle data. These services range
 from APIs to Oracle data explorers
 
-- [Hotspotty](https://hotspotty.net)
+- [Hotspotty](https://hotspotty.net/api/)
 - [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html)
 - [Helium Deploy](https://www.heliumdeploy.io)
